tdf#130475 Remove mysterious grab focus

Grabing focus at this location in SwFormatTablePage::DeactivatePage
prevents adjacent tab pages from keeping focus on their tab when
keyboard navigating the dialog.

Change-Id: Ie90722572569ac0cd5251682a19727c91e2a326d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88162
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>